--- a/index.html
+++ b/index.html
@@ -33,5 +33,112 @@
             </div>
         </div>
     </header>
+    <section class="dropdown">
+        <div class="shadow-block">
+            <div class="main-dropdown">
+                <ul class="showcase-list">
+                    <li class="showcase-list__items">
+                        <span class="content-change">
+                            <span class="content-change__logo">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="43px" viewBox="0 0 24 43" enable-background="new 0 0 24 43" xml:space="preserve">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B" d="M12.0079,38L0.1203,26.2519V11.3133L6.5077,5h11.1349
+                                        l6.2371,6.1648v15.1031L12.0079,38z M22.6072,11.6439l-5.5698-5.505H7.0958l-5.703,5.6372v13.8976l10.6144,10.4895l10.6-10.4767
+                                        V11.6439z M9.6349,12.8178H2.7966l4.8942-4.9479h8.7921l4.8087,4.9479h-6.8403v19.9073l-2.4074,2.405l-2.409-2.405V12.8178z
+                                         M16.6219,14.1333h4.6433v11.1782l-3.5211,3.5552l-3.2382-3.229v-0.006l2.116-2.0969V14.1333z M7.3813,23.5348l2.2045,2.1019
+                                        l-3.3285,3.2301l-3.5185-3.5551V14.1331h4.6425V23.5348z">
+                                    </path>
+                                </svg>
+                            </span>
+                            <span class="content-change__text">World of Tanks</span>
+                        </span>
+                    </li>
+                    <li class="showcase-list__items">
+                        <span class="content-change">
+                            <span class="content-change__logo">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="43px" viewBox="0 0 24 43" enable-background="new 0 0 24 43" xml:space="preserve">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B"  d="M15.2619,18.4452l3.7372-2.2235l0.0001-2.3485h-4.6986l0.0001-1.4529l2.222-1.9551V7.9741H7.4711v2.4911
+                                        l2.2221,1.9551v1.4529H4.9947v2.3485l3.7373,2.2235h0.9615v9.4942l-2.5678-1.5288v-5.2818l-4.25-2.5377v10.5438l9.1244,5.4326
+                                        l9.1243-5.4327V18.5911l-4.2562,2.5377v5.2818l-2.5676,1.5288v-9.4942H15.2619z M18.299,5.0004l5.7003,3.3904v22.4643
+                                        l-11.9996,7.1445l-11.999-7.1445V8.3908L5.701,5.0004H18.299z M22.5618,9.2514l-4.6465-2.7637H6.0847L1.4382,9.2514V29.995
+                                        l10.5615,6.2886l10.5621-6.2886V9.2514z">
+                                    </path>
+                                </svg>
+                            </span>
+                            <span class="content-change__text">World of Warships</span>
+                        </span>
+                    </li>
+                    <li class="showcase-list__items">
+                        <span class="content-change">
+                            <span class="content-change__logo">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="39px" viewBox="0 0 36 39" style="enable-background:new 0 0 36 39;" xml:space="preserve">
+                                    <g>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B"  d="M26.1,0C20.9,0,15.1,0,9.9,0l-7,3.9v26.8L18,39l15.1-8.3V3.9L26.1,0z M30.8,29.4l-12.8,7l-12.8-7V5.2l5.4-2.9
+                                            c5,0,9.9,0,15,0l5.3,2.9V29.4z">
+                                        </path>
+                                        <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B"  points="21.6,16.1 25.9,13.7 25.9,11.2 20.6,11.2 20.6,9.7 23.2,7.7 23.2,5 12.8,5 12.8,7.7 15.4,9.7 
+                                            15.4,11.2 10.1,11.2 10.1,13.7 14.4,16.1 15.4,16.1 15.4,26 12.5,24.4 12.5,18.9 7.7,16.2 7.7,27.3 18,33 28.3,27.3 28.3,16.2 
+                                            23.5,18.9 23.5,24.4 20.6,26 20.6,16.1 	">
+                                        </polygon>
+                                    </g>
+                                </svg>
+                            </span>
+                            <span class="content-change__text">World of Warships: Legends</span>
+                        </span>
+                    </li>
+                    <li class="showcase-list__items">
+                        <span class="content-change">
+                            <span class="content-change__logo">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="43px" viewBox="0 0 24 43" enable-background="new 0 0 24 43" xml:space="preserve">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B"  d="M12.00001,38L-0.00001,25.745V10.427L12.00001,5l12,5.515v15.318L12.00001,38z M22.69551,11.302
+                                        l-10.7819-4.726L1.13059,11.302V25.22l10.86942,10.854l10.6955-10.767V11.302z M11.91361,32.923l1.6522-8.491l-3.9125,1.838
+                                        l2.1738-8.403L7.04419,19.88L9.91361,9.376l2.0864-0.962l2,0.875l-2.0874,6.215l4.0864-1.576l-2.9568,9.191l4-1.926L11.91361,32.923
+                                        z">
+                                    </path>
+                                </svg>
+                            </span>
+                            <span class="content-change__text">World of Tanks Blitz</span>
+                        </span>
+                    </li>
+                    <li class="showcase-list__items">
+                        <span class="content-change">
+                            <span class="content-change__logo">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" style="enable-background:new 0 0 28 28;" xml:space="preserve">
+                                    <g id="CALIBER_x5F_Symbol_x5F_WhiteR_2_">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B"  d="M14,0C6.3,0,0,6.3,0,14s6.3,14,14,14s14-6.3,14-14S21.7,0,14,0z
+                                             M20.4,9.8c1,2.9,0.8,6-1,8.4l0.6,0.5c-2.4,1.8-5.5,2.6-8.3,1.7l-0.3,0.7c-2.5-1.7-4.2-4.4-4.2-7.4l-0.7-0.1l0,0
+                                            c0.9-2.9,2.9-5.3,5.8-6.2L12,6.7l0,0c3.1-0.1,6,1.1,7.7,3.6L20.4,9.8L20.4,9.8z M14,3.1c1.5,0,2.9,0.3,4.2,0.9l0,0l-0.3,1.7l0,0
+                                            l0,0c1,1.1,1.7,2.4,2.3,3.7l0,0l-0.3,0.2c-2.5-3.2-6.2-4.7-9.6-4.3L9.8,3.9l0,0C11.1,3.4,12.5,3.1,14,3.1z M3.1,14.9
+                                            c0-0.3,0-0.6,0-0.9c0-2.7,1-5.2,2.7-7.1l0,0l1.5,0.8l0,0l0,0l0,0c1.4-0.6,2.8-0.9,4.2-1l0,0V7c-3.8,1.4-6.4,4.5-7.1,7.9l0,0H3.1z
+                                             M11.5,24.6c-2.9-0.7-5.4-2.5-6.9-5l1.3-1.2l0,0l0,0c-0.1-1.5,0-3,0.3-4.3l0,0h0.4c0.2,4,2.3,7.5,5.3,9.1L11.5,24.6z M16.5,24.6
+                                            L15.8,23l0,0l0,0c-1.5-0.3-2.8-0.9-4-1.6l0.1-0.4c3.9,1.1,7.8,0.2,10.3-2.2l0,0l1.1,0.8C21.8,22.1,19.4,24,16.5,24.6z M24.9,14.9
+                                            L24.9,14.9l-1.7,0.2l0,0l0,0c-0.8,1.3-1.7,2.4-2.8,3.3l-0.3-0.3c2.2-3.3,2.6-7.4,1.1-10.5l1.1-0.8l0,0C24,8.7,25,11.2,25,13.9
+                                            C24.9,14.3,24.9,14.6,24.9,14.9z">
+                                        </path>
+                                    </g>
+                                </svg>
+                            </span>
+                            <span class="content-change__text">Калибр</span>
+                        </span>
+                    </li>
+                    <li class="showcase-list__items">
+                        <span class="content-change">
+                            <span class="content-change__logo">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="38px" height="24px" viewBox="0 0 38 24" enable-background="new 0 0 38 24" xml:space="preserve">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B"  d="M37.4,21.9v-2.6h0v-19h-4.7V20h-2V0.3H26V20h-8.9c2-0.1,7.5-0.8,7.5-10.2c0-10-7.5-9.5-8.1-9.5s-4.2,0-4.2,0
+                                        V20H7.1c3.3-1,4-4,4-5.9c0-2.3-1.3-3.9-3-5.4C6.5,7.1,4.8,6.2,5.6,5.1c1.1-1.7,4.2,0.5,4.2,0.5V0.9c0,0-1.4-0.9-3.6-0.9
+                                        C1.4,0,0.6,4.8,0.6,5.8c0,0.9,0,2.9,2.8,5.1c2.2,1.7,2.7,2.5,2.7,3.4c0,0.9-0.8,1.6-2.2,1.6c-1.4,0-2.8-1.5-2.8-1.5v4.8
+                                        c0,0,1.1,1.1,3.7,1.1c0.9,0,1.6-0.1,2.3-0.3h26.9v0h3.5L37.4,21.9H0.5V24h37L37.4,21.9L37.4,21.9z M17,4.4c0,0,2.8-0.5,2.8,5.4
+                                        c0,6.7-2.8,6-2.8,6V4.4z">
+                                    </path>
+                                </svg>
+                            </span>
+                            <span class="content-change__text">Steel Division 2</span>
+                        </span>
+                    </li>
+                </ul>
+                <div></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
