improvements in svg

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     </a>
                     <div class="showcase" onclick="showcase()">
                         <span class="showcase__text">Игры</span>
-                        <span class="showcase__text"></span>
+                        <span class="showcase__check-mark"></span>
                     </div>
                     <div class="showcase">
                         <span class="showcase__text">Сервисы</span>
-                        <span class="showcase__text"></span>
+                        <span class="showcase__check-mark"></span>
                     </div>
                 </div>
                 <div class="static-menu">
