--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     </path>
                                 </svg>
                             </span>
-                            <span class="content-change__text">World of Tanks</span>
+                            <span class="content-change__text" style="color: #F25322;">World of Tanks</span>
                         </span>
                     </li>
                     <li class="showcase-list__items" onclick="content_change(1)">
@@ -138,6 +138,25 @@
                     </li>
                 </ul>
                 <div></div>
+            </div>
+        </div>
+        <div class="media-block">
+            <div class="container">
+                <div class="media-content">
+                    <div class="media-content__logo-game"></div>
+                </div>
+                <div class="combine">
+                    <div class="combine-content">
+                        <h2 class="combine-content__title">world of tanks</h2>
+                        <p class="combine-content__text">
+                            Командный танковый экшен. Более 500 моделей военной техники Второй мировой. 
+                            Многомиллионная армия поклонников. Лучшая онлайн-игра на постсоветском пространстве.
+                        </p>
+                    </div>
+                    <div class="combine-content">
+
+                    </div>
+                </div>
             </div>
         </div>
     </section>
