--- a/index.html
+++ b/index.html
@@ -152,9 +152,57 @@
                             Командный танковый экшен. Более 500 моделей военной техники Второй мировой. 
                             Многомиллионная армия поклонников. Лучшая онлайн-игра на постсоветском пространстве.
                         </p>
+                        <div class="platforms">
+                            <div class="platform">
+                                <span class="platform__logo"></span>
+                                <span class="platform__text">windows</span>
+                            </div>
+                            <div class="platform">
+                                <span class="platform__logo"></span>
+                                <span class="platform__text">mac</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="combine-content">
-
+                        <h2 class="combine-content__title">ссылка</h2>
+                        <ul class="list-links">
+                            <a href="#">
+                                <li class="list-links__items">
+                                    <span class="point"></span>
+                                    <p class="bottom-frame">Сайт игры</p>
+                                </li>
+                            </a>
+                            <a href="#">
+                                <li class="list-links__items">
+                                    <span class="point"></span>
+                                    <p class="bottom-frame">Форум</p>
+                                </li>
+                            </a>
+                            <a href="#">
+                                <li class="list-links__items">
+                                    <span class="point"></span>
+                                    <p class="bottom-frame">Центр поддержки</p>
+                                </li>
+                            </a>
+                            <a href="#">
+                                <li class="list-links__items">
+                                    <span class="point"></span>
+                                    <p class="bottom-frame">Кланы</p>
+                                </li>
+                            </a>
+                            <a href="#">
+                                <li class="list-links__items">
+                                    <span class="point"></span>
+                                    <p class="bottom-frame">Мобильный помощник</p>
+                                </li>
+                            </a>
+                            <a href="#">
+                                <li class="list-links__items">
+                                    <span class="point"></span>
+                                    <p class="bottom-frame">Портал модов</p>
+                                </li>
+                            </a>
+                        </ul>
                     </div>
                 </div>
             </div>
