--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <span class="content-change__logo">
                                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="39px" viewBox="0 0 36 39" style="enable-background:new 0 0 36 39;" xml:space="preserve">
                                     <g>
-                                        <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B" d="M26.1,0C20.9,0,15.1,0,9.9,0l-7,3.9v26.8L18,39l15.1-8.3V3.9L26.1,0z M30.8,29.4l-12.8,7l-12.8-7V5.2l5.4-2.9
+                                        <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B" class="change-color" d="M26.1,0C20.9,0,15.1,0,9.9,0l-7,3.9v26.8L18,39l15.1-8.3V3.9L26.1,0z M30.8,29.4l-12.8,7l-12.8-7V5.2l5.4-2.9
                                             c5,0,9.9,0,15,0l5.3,2.9V29.4z">
                                         </path>
                                         <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B" class="change-color" points="21.6,16.1 25.9,13.7 25.9,11.2 20.6,11.2 20.6,9.7 23.2,7.7 23.2,5 12.8,5 12.8,7.7 15.4,9.7 
