--- a/index.html
+++ b/index.html
@@ -168,42 +168,42 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">ссылка</h2>
                             <ul class="list-links">
-                                <a href="#">
-                                    <li class="list-links__items">
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Сайт игры</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Форум</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Центр поддержки</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Кланы</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Мобильный помощник</p>
-                                    </li>
-                                </a>
-                                <a href="#">
-                                    <li class="list-links__items">
+                                    </a>
+                                </li>
+                                <li class="list-links__items">
+                                    <a href="#" class="link-point">
                                         <span class="point"></span>
                                         <p class="bottom-frame">Портал модов</p>
-                                    </li>
-                                </a>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -468,6 +468,33 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="main-heading">
+        <img class="title-bacground" src="./images/title-bacground/inb-road-to-berlin.jpg" alt="">
+        <div class="nav-menu">
+            <ul class="main-menu">
+                <li class="main-menu__items"></li>
+                <li class="main-menu__items">
+                    <a href="#" class="nav-links">игра</a>
+                </li>
+                <li class="main-menu__items">
+                    <a href="#" class="nav-links">рейтинги</a>
+                </li>
+                <li class="main-menu__items">
+                    <a href="#" class="nav-links">кланы</a>
+                </li>
+                <li class="main-menu__items"></li>
+                <li class="main-menu__items">
+                    <a href="#" class="nav-links">турниры</a>
+                </li>
+                <li class="main-menu__items">
+                    <a href="#" class="nav-links">сообщество</a>
+                </li>
+            </ul>
+        </div>
+        <div class="container-box">
+
         </div>
     </section>
 </body>
