--- a/index.html
+++ b/index.html
@@ -477,12 +477,41 @@
                 <li class="main-menu__items"></li>
                 <li class="main-menu__items">
                     <a href="#" class="nav-links">игра</a>
+                    <span class="nav-arrow"></span>
+                    <ul class="nav-list">
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Скачать игру</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">медиа</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Новости</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Танковедение</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Новичку</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">В разработке</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Календарь событий</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Руководство</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Экономика</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Достижения</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Обновления</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Безопасность</a></li>
+                    </ul>
                 </li>
                 <li class="main-menu__items">
                     <a href="#" class="nav-links">рейтинги</a>
+                    <span class="nav-arrow"></span>
+                    <ul class="nav-list">
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Рейтинг по достижениям</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Рейтинг по технике</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Ранговые бои</a></li>
+                    </ul>
                 </li>
                 <li class="main-menu__items">
                     <a href="#" class="nav-links">кланы</a>
+                    <span class="nav-arrow"></span>
+                    <ul class="nav-list">
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Укрепрайон</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Глобальная карта</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Рейтинг кланов</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Клановый портал</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Рейтинг сезона</a></li>
+                    </ul>
                 </li>
                 <li class="main-menu__items"></li>
                 <li class="main-menu__items">
@@ -490,8 +519,21 @@
                 </li>
                 <li class="main-menu__items">
                     <a href="#" class="nav-links">сообщество</a>
+                    <span class="nav-arrow"></span>
+                    <ul class="nav-list">
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Мой профиль</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Форум</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Игроки</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Полезный софт</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Танковое радио</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Пригласить друга</a></li>
+                        <li class="nav-list__items"><a href="#" class="nav-list__link">Портал модов</a></li>
+                    </ul>
                 </li>
             </ul>
+            <div class="registration">
+
+            </div>
         </div>
         <div class="container-box">
 
