--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#" class="logo">
                         <span class="logo__item"></span>
                     </a>
-                    <div class="showcase" onclick="showcase()">
+                    <div class="showcase">
                         <span class="showcase__text">Игры</span>
                         <span class="showcase__check-mark"></span>
                     </div>
