--- a/index.html
+++ b/index.html
@@ -558,7 +558,15 @@
         </div>
         <div class="slider-store">
             <div class="slider-block">
-
+                <div class="slider-width">
+                    <div class="slider-img">
+                        <div class="slider-carousel">
+                            <div class="slider-carousel__arrows-one"></div>
+                            <p class="slider-carousel__text">Обновление 1.9. Актуальная версия игры</p>
+                            <div class="slider-carousel__arrows-two"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="block-store">
                 <span class="link-store">
